# oplint

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  default_rules.yaml  install.sh  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  rule_feedback.yml
.github/workflows/: ci.yml  release-please.yml
docs/: CNAME  index.html  landing.css  landing.js  tweaks.jsx
live/: Dockerfile  README.md  docker-compose.yml  justfile
live/server/: Cargo.toml
live/server/src/: main.rs
live/server/templates/: index.html
src/: config.rs  file_helper.rs  formatters.rs  lib.rs  linter.rs  main.rs  report.rs  types.rs
src/checks/: check_callback_signature.rs  check_command_id_no_command.rs  check_command_id_prefix.rs  check_command_name_no_command.rs  check_command_name_prefix.rs  check_global_app.rs  check_global_document_window.rs  check_global_timers.rs  check_instanceof_dom.rs  check_markdown_renderer_component.rs  check_navigator_usage.rs  check_onunload_detach.rs  check_plugin_onunload.rs  check_popover_suggest_usage.rs  check_promise_async_await.rs  check_redundant_heading.rs  check_regex_lookbehind.rs  check_settings_in_setname.rs  check_view_references.rs  mod.rs  node_desktop_only.rs  validate_license_copyright.rs
templates/: config.json  config.toml  config.yaml  report.html  report.md
tests/: config_test.rs  rules_test.rs  types_test.rs  utils_test.rs
